--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t gastus:docker-react -f Dockerfile.dev .
+  - docker build -t gastus/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run gastus/docker-react npm run test -- --coverage
+  - docker run -e CI=true gastus/docker-react npm run test -- --coverage
