--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,15 @@ before_install:
 script:
   - docker run -e CI=true gastus/docker-react npm run test -- --coverage
 
+after_success:
+  - docker build -t gastus35/docker-react .
+
+  # Login to docker in one command
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
+  # Push images to docker hub
+  - docker push gastus35/docker-react
+
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
